feat: (untested) contact network reconstruction

--- a/CSMODEL_MCO1_Notebook.ipynb
+++ b/CSMODEL_MCO1_Notebook.ipynb
@@ -830,6 +830,14 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "id": "b4688f0e",
+      "metadata": {},
+      "source": [
+        "Visualization"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 49,
       "id": "18ffa744",
@@ -1038,6 +1046,182 @@
         "\n",
         "# Initialize a Mixed Graph (directed and undirected edges)\n",
         "G = nx.MultiDiGraph()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "19d74cd4",
+      "metadata": {},
+      "source": [
+        "Node & Attribute Mapping"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "7358999c",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Iterate through the individual data to add nodes\n",
+        "for index, row in df_ind.iterrows():\n",
+        "    node_id = str(row['id'])\n",
+        "    \n",
+        "    # Create a dictionary of attributes for this person\n",
+        "    attributes = {\n",
+        "        'age': row['age'],\n",
+        "        'gender': row['gender'],\n",
+        "        'confirmed_date': row['confirmed_date'],\n",
+        "        'asymptomatic_date': row['earliest_infection_date'], # Proxy for infection start\n",
+        "        # 'is_infected': str(row['id']).startswith('I') # boolean flag based on ID convention\n",
+        "    }\n",
+        "    \n",
+        "    # Add node to graph with attributes\n",
+        "    G.add_node(node_id, **attributes)\n",
+        "\n",
+        "print(f\"Graph initialized with {G.number_of_nodes()} nodes\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "41e90099",
+      "metadata": {},
+      "source": [
+        "Edge Reconstruction"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "a9762c76",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Iterate through the edge list to reconstruct network\n",
+        "for index, row in df_edg.iterrows():\n",
+        "    source = str(row['source'])\n",
+        "    target = str(row['target'])\n",
+        "    interaction_type = int(row['interaction'])\n",
+        "    is_directed = bool(row['directed'])\n",
+        "    \n",
+        "    # Define edge attributes\n",
+        "    edge_attrs = {\n",
+        "        'interaction': interaction_type,\n",
+        "        'directed_path': is_directed\n",
+        "    }\n",
+        "    \n",
+        "    if is_directed:\n",
+        "        # If directed=True, it is a transmission path (Source -> Target)\n",
+        "        G.add_edge(source, target, color='red', **edge_attrs)\n",
+        "    else:\n",
+        "        # If directed=False, it is a contact without known transmission direction\n",
+        "        # represent undirected contacts by adding edges both directions\n",
+        "        G.add_edge(source, target, color='grey', **edge_attrs)\n",
+        "        G.add_edge(target, source, color='grey', **edge_attrs)\n",
+        "\n",
+        "print(f\"Graph reconstructed with {G.number_of_edges()} edges\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "ba8d517d",
+      "metadata": {},
+      "source": [
+        "Analysis & Metrics"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "5d75e3cc",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Convert to undirected to find connected components (clusters)\n",
+        "G_undirected = G.to_undirected()\n",
+        "\n",
+        "# Get all clusters (connected components)\n",
+        "clusters = list(nx.connected_components(G_undirected))\n",
+        "\n",
+        "# Calculate stats\n",
+        "num_clusters = len(clusters)\n",
+        "cluster_sizes = [len(c) for c in clusters]\n",
+        "max_cluster = max(cluster_sizes)\n",
+        "\n",
+        "print(f\"Total Clusters Identified: {num_clusters}\") # ~152\n",
+        "print(f\"Largest Cluster Size: {max_cluster}\")      # ~1,898"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "233c686d",
+      "metadata": {},
+      "source": [
+        "Secondary Attack Rate (SAR) by Interaction"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "a79b9a9d",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Dictionary mapping interaction codes to names\n",
+        "interaction_map = {\n",
+        "    0: 'Couple', 1: 'Parent/Child', 2: 'Grandparent/Grandchild', 3: 'Brother/Sister',\n",
+        "    4: 'Family', 5: 'Friend', 6: 'Live together', 7: 'The same flight',\n",
+        "    8: 'Flight nearby seat', 9: 'Travel together', 10: 'School', 11: 'Car',\n",
+        "    12: 'Hotel', 13: 'Quarantine hotel', 14: 'Coworker', 15: 'Hospital',\n",
+        "    16: 'Panshi Ship', 17: 'Coral Princess', 18: 'Other'\n",
+        "}\n",
+        "\n",
+        "# 1. Count Total Contacts per Interaction Type\n",
+        "total_counts = df_edg['interaction'].value_counts().sort_index()\n",
+        "\n",
+        "# 2. Count Infection Paths (Directed Edges) per Interaction Type\n",
+        "# edges where transmission actually occurred\n",
+        "infection_counts = df_edg[df_edg['directed'] == True]['interaction'].value_counts().sort_index()\n",
+        "\n",
+        "# 3. Combine into a DataFrame for SAR Analysis\n",
+        "sar_df = pd.DataFrame({\n",
+        "    'Interaction': [interaction_map.get(i, f'Type {i}') for i in total_counts.index],\n",
+        "    'Total_Contacts': total_counts.values,\n",
+        "    # Use 'get' to handle cases where an interaction type might have 0 infections\n",
+        "    'Infection_Events': [infection_counts.get(i, 0) for i in total_counts.index]\n",
+        "})\n",
+        "\n",
+        "# Calculate Risk (Proxy for SAR)\n",
+        "sar_df['Transmission_Risk_Pct'] = (sar_df['Infection_Events'] / sar_df['Total_Contacts']) * 100\n",
+        "\n",
+        "print(sar_df.sort_values('Transmission_Risk_Pct', ascending=False))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "993b25c8",
+      "metadata": {},
+      "source": [
+        "Visualization"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "9ef5b167",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# View plot graph\n",
+        "ax = sar_df.plot(x='Interaction', y=['Total_Contacts', 'Infection_Events'], kind='bar', \n",
+        "                 figsize=(12, 6), color=['green', 'blue'], logy=True)\n",
+        "\n",
+        "plt.title('Total Contacts vs Infection Events by Interaction Type')\n",
+        "plt.ylabel('Frequency (Log Scale)')\n",
+        "plt.xlabel('Interaction Type')\n",
+        "plt.xticks(rotation=45, ha='right')\n",
+        "plt.tight_layout()\n",
+        "plt.show()"
       ]
     }
   ],
