--- a/CSMODEL_MCO1_Notebook_(Step_2_finished).ipynb
+++ b/CSMODEL_MCO1_Notebook_(Step_2_finished).ipynb
@@ -70,13 +70,13 @@
             "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.12/dist-packages (from pandas<3.0,>=2.1->lifelines) (2025.3)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.12/dist-packages (from python-dateutil>=2.7->matplotlib>=3.0->lifelines) (1.17.0)\n",
             "Downloading lifelines-0.30.1-py3-none-any.whl (350 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m350.0/350.0 kB\u001b[0m \u001b[31m6.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m350.0/350.0 kB\u001b[0m \u001b[31m8.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m\n",
             "\u001b[?25hDownloading formulaic-1.2.1-py3-none-any.whl (117 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m117.3/117.3 kB\u001b[0m \u001b[31m5.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m117.3/117.3 kB\u001b[0m \u001b[31m8.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading interface_meta-1.3.0-py3-none-any.whl (14 kB)\n",
             "Building wheels for collected packages: autograd-gamma\n",
             "  Building wheel for autograd-gamma (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for autograd-gamma: filename=autograd_gamma-0.5.0-py3-none-any.whl size=4030 sha256=c65b9c6d25921f1baa46e16360b91fbc361c914b45978c60cfacb0ca806ab5cd\n",
+            "  Created wheel for autograd-gamma: filename=autograd_gamma-0.5.0-py3-none-any.whl size=4030 sha256=a7dd1456e7fe4698dd18c69904a20d11ca95a1bfa0a5e587ae6607506041c60e\n",
             "  Stored in directory: /root/.cache/pip/wheels/50/37/21/0a719b9d89c635e89ff24bd93b862882ad675279552013b2fb\n",
             "Successfully built autograd-gamma\n",
             "Installing collected packages: interface-meta, autograd-gamma, formulaic, lifelines\n",
@@ -146,7 +146,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 10,
       "id": "G7_Y2O1sEj09",
       "metadata": {
         "id": "G7_Y2O1sEj09"
@@ -160,7 +160,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 11,
       "id": "EnSUiZQzEj09",
       "metadata": {
         "colab": {
@@ -173,12 +173,9 @@
       "outputs": [
         {
           "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "dataframe"
-            },
             "text/html": [
               "\n",
-              "  <div id=\"df-0b21e274-f522-402e-8a01-d4a3df669654\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-46ab8381-01bc-486e-a090-1b693ee3e733\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -346,17 +343,17 @@
               "<p>5 rows × 40 columns</p>\n",
               "</div>\n",
               "    <div class=\"colab-df-buttons\">\n",
-              "\n",
+              "      \n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0b21e274-f522-402e-8a01-d4a3df669654')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-46ab8381-01bc-486e-a090-1b693ee3e733')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
-              "\n",
+              "      \n",
               "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\" viewBox=\"0 -960 960 960\">\n",
               "    <path d=\"M120-120v-720h720v720H120Zm60-500h600v-160H180v160Zm220 220h160v-160H400v160Zm0 220h160v-160H400v160ZM180-400h160v-160H180v160Zm440 0h160v-160H620v160ZM180-180h160v-160H180v160Zm440 0h160v-160H620v160Z\"/>\n",
               "  </svg>\n",
               "    </button>\n",
-              "\n",
+              "    \n",
               "  <style>\n",
               "    .colab-df-container {\n",
               "      display:flex;\n",
@@ -400,12 +397,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-0b21e274-f522-402e-8a01-d4a3df669654 button.colab-df-convert');\n",
+              "        document.querySelector('#df-46ab8381-01bc-486e-a090-1b693ee3e733 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-0b21e274-f522-402e-8a01-d4a3df669654');\n",
+              "        const element = document.querySelector('#df-46ab8381-01bc-486e-a090-1b693ee3e733');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -423,10 +420,10 @@
               "      }\n",
               "    </script>\n",
               "  </div>\n",
-              "\n",
-              "\n",
+              "  \n",
               "    </div>\n",
-              "  </div>\n"
+              "  </div>\n",
+              "  "
             ],
             "text/plain": [
               "     id abroad/local infection_source visited_countries/cities  \\\n",
@@ -488,7 +485,7 @@
               "[5 rows x 40 columns]"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -500,7 +497,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 12,
       "id": "qzuVXRkhEj09",
       "metadata": {
         "colab": {
@@ -571,165 +568,26 @@
     },
     {
       "cell_type": "markdown",
-      "id": "481ae9f2",
-      "metadata": {
-        "id": "481ae9f2"
-      },
+      "id": "76ee43b1",
+      "metadata": {},
       "source": [
-        "# 2. Definte State Mapping Logic"
+        "# 2. Preprocess Data"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "fed19edb",
+      "metadata": {},
+      "source": [
+        "Convert data types"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
-      "id": "6e452fe5",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 711
-        },
-        "id": "6e452fe5",
-        "outputId": "3ef379f6-465f-49c4-ceb9-3240f4036776"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>count</th>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>date_of_departure_1</th>\n",
-              "      <th></th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>2020-01-01 00:00:00+00:00</th>\n",
-              "      <td>22</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2020-02-01 00:00:00+00:00</th>\n",
-              "      <td>16</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2020-03-01 00:00:00+00:00</th>\n",
-              "      <td>6</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2019-12-01 00:00:00+00:00</th>\n",
-              "      <td>5</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2020-09-01 00:00:00+00:00</th>\n",
-              "      <td>3</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2019-09-01 00:00:00+00:00</th>\n",
-              "      <td>3</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2019-11-01 00:00:00+00:00</th>\n",
-              "      <td>3</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2020-06-01 00:00:00+00:00</th>\n",
-              "      <td>2</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2020-04-01 00:00:00+00:00</th>\n",
-              "      <td>2</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2019-08-01 00:00:00+00:00</th>\n",
-              "      <td>2</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2020-08-01 00:00:00+00:00</th>\n",
-              "      <td>2</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2020-10-01 00:00:00+00:00</th>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2019-06-01 00:00:00+00:00</th>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2019-10-01 00:00:00+00:00</th>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2019-05-01 00:00:00+00:00</th>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2020-07-01 00:00:00+00:00</th>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2019-04-01 00:00:00+00:00</th>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2016-11-01 00:00:00+00:00</th>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2018-10-01 00:00:00+00:00</th>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div><br><label><b>dtype:</b> int64</label>"
-            ],
-            "text/plain": [
-              "date_of_departure_1\n",
-              "2020-01-01 00:00:00+00:00    22\n",
-              "2020-02-01 00:00:00+00:00    16\n",
-              "2020-03-01 00:00:00+00:00     6\n",
-              "2019-12-01 00:00:00+00:00     5\n",
-              "2020-09-01 00:00:00+00:00     3\n",
-              "2019-09-01 00:00:00+00:00     3\n",
-              "2019-11-01 00:00:00+00:00     3\n",
-              "2020-06-01 00:00:00+00:00     2\n",
-              "2020-04-01 00:00:00+00:00     2\n",
-              "2019-08-01 00:00:00+00:00     2\n",
-              "2020-08-01 00:00:00+00:00     2\n",
-              "2020-10-01 00:00:00+00:00     1\n",
-              "2019-06-01 00:00:00+00:00     1\n",
-              "2019-10-01 00:00:00+00:00     1\n",
-              "2019-05-01 00:00:00+00:00     1\n",
-              "2020-07-01 00:00:00+00:00     1\n",
-              "2019-04-01 00:00:00+00:00     1\n",
-              "2016-11-01 00:00:00+00:00     1\n",
-              "2018-10-01 00:00:00+00:00     1\n",
-              "Name: count, dtype: int64"
-            ]
-          },
-          "execution_count": 7,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "execution_count": 13,
+      "id": "6bd43841",
+      "metadata": {},
+      "outputs": [],
       "source": [
         "# Convert all date columns to datetime objects\n",
         "date_cols = ['date_of_departure_1', 'date_of_arrival_1', 'date_of_departure_2', 'date_of_arrival_2', 'date_of_departure_3',\n",
@@ -738,10 +596,17 @@
         "             'date_of_contact_with_infected_case', 'earliest_infection_date', 'negative_test_date_1', 'negative_test_date_2',\n",
         "             'negative_test_date_3', 'negative_test_date_4']\n",
         "for col in date_cols:\n",
-        "    df_ind[col] = pd.to_datetime(df_ind[col], errors='coerce', utc='True')\n",
-        "\n",
-        "# View\n",
-        "df_ind['date_of_departure_1'].value_counts()"
+        "    df_ind[col] = pd.to_datetime(df_ind[col], errors='coerce', utc='True')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "481ae9f2",
+      "metadata": {
+        "id": "481ae9f2"
+      },
+      "source": [
+        "# 3. Definte State Mapping Logic"
       ]
     },
     {
@@ -826,13 +691,6 @@
         "df_ind['duration_C_to_R'] = (df_ind['recovery'] - df_ind['confirmed_date']).dt.days\n",
         "# Create Confirmed Onset to Death variable\n",
         "df_ind['duration_C_to_D'] = (df_ind['death_date'] - df_ind['confirmed_date']).dt.days\n",
-        "\n",
-        "# Filter out invalid observations\n",
-        "# df_ind = df_ind[df_ind['duration_IA_to_IS'] >= 0]\n",
-        "# df_ind = df_ind[df_ind['duration_IS_to_C'] >= 0]\n",
-        "# df_ind = df_ind[df_ind['duration_C_to_IC'] >= 0]\n",
-        "# df_ind = df_ind[df_ind['duration_C_to_R'] >= 0]\n",
-        "# df_ind = df_ind[df_ind['duration_C_to_D'] >= 0]\n",
         "\n",
         "df_ind.info()"
       ]
@@ -1190,7 +1048,7 @@
         "id": "922b56ce"
       },
       "source": [
-        "# 3. Reconstruct the Contact Network"
+        "# 4. Reconstruct the Contact Network"
       ]
     },
     {
@@ -1698,6 +1556,18 @@
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
       "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.12"
     }
   },
   "nbformat": 4,
