removed weiner balls and placed warning

--- a/CSMODEL_MCO1_Notebook_(Step_2_finished).ipynb
+++ b/CSMODEL_MCO1_Notebook_(Step_2_finished).ipynb
@@ -28,7 +28,11 @@
       },
       "source": [
         "**Prepared by:**\n",
-        "- Email: wiener baalls"
+        "- Agraviador, Nash Radley\n",
+        "- Aya-ay, Viktor Rafale\n",
+        "- Bicomong, Chy Andre\n",
+        "- Esguerra, Darryl Matthew \n",
+        "- Gonzales, Ulrich Maeko"
       ]
     },
     {
@@ -57,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": 1,
       "id": "8c2595e0",
       "metadata": {
         "colab": {
@@ -71,15 +75,20 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Requirement already satisfied: lifelines in /usr/local/lib/python3.12/dist-packages (0.30.1)\n",
+            "Collecting lifelines\n",
+            "  Downloading lifelines-0.30.1-py3-none-any.whl.metadata (3.4 kB)\n",
             "Requirement already satisfied: numpy>=1.14.0 in /usr/local/lib/python3.12/dist-packages (from lifelines) (2.0.2)\n",
             "Requirement already satisfied: scipy>=1.7.0 in /usr/local/lib/python3.12/dist-packages (from lifelines) (1.16.3)\n",
             "Requirement already satisfied: pandas<3.0,>=2.1 in /usr/local/lib/python3.12/dist-packages (from lifelines) (2.2.2)\n",
             "Requirement already satisfied: matplotlib>=3.0 in /usr/local/lib/python3.12/dist-packages (from lifelines) (3.10.0)\n",
             "Requirement already satisfied: autograd>=1.5 in /usr/local/lib/python3.12/dist-packages (from lifelines) (1.8.0)\n",
-            "Requirement already satisfied: autograd-gamma>=0.3 in /usr/local/lib/python3.12/dist-packages (from lifelines) (0.5.0)\n",
-            "Requirement already satisfied: formulaic>=0.2.2 in /usr/local/lib/python3.12/dist-packages (from lifelines) (1.2.1)\n",
-            "Requirement already satisfied: interface-meta>=1.2.0 in /usr/local/lib/python3.12/dist-packages (from formulaic>=0.2.2->lifelines) (1.3.0)\n",
+            "Collecting autograd-gamma>=0.3 (from lifelines)\n",
+            "  Downloading autograd-gamma-0.5.0.tar.gz (4.0 kB)\n",
+            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "Collecting formulaic>=0.2.2 (from lifelines)\n",
+            "  Downloading formulaic-1.2.1-py3-none-any.whl.metadata (7.0 kB)\n",
+            "Collecting interface-meta>=1.2.0 (from formulaic>=0.2.2->lifelines)\n",
+            "  Downloading interface_meta-1.3.0-py3-none-any.whl.metadata (6.7 kB)\n",
             "Requirement already satisfied: narwhals>=1.17 in /usr/local/lib/python3.12/dist-packages (from formulaic>=0.2.2->lifelines) (2.16.0)\n",
             "Requirement already satisfied: typing-extensions>=4.2.0 in /usr/local/lib/python3.12/dist-packages (from formulaic>=0.2.2->lifelines) (4.15.0)\n",
             "Requirement already satisfied: wrapt>=1.0 in /usr/local/lib/python3.12/dist-packages (from formulaic>=0.2.2->lifelines) (2.1.1)\n",
@@ -93,7 +102,19 @@
             "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.12/dist-packages (from matplotlib>=3.0->lifelines) (2.9.0.post0)\n",
             "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.12/dist-packages (from pandas<3.0,>=2.1->lifelines) (2025.2)\n",
             "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.12/dist-packages (from pandas<3.0,>=2.1->lifelines) (2025.3)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.12/dist-packages (from python-dateutil>=2.7->matplotlib>=3.0->lifelines) (1.17.0)\n"
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.12/dist-packages (from python-dateutil>=2.7->matplotlib>=3.0->lifelines) (1.17.0)\n",
+            "Downloading lifelines-0.30.1-py3-none-any.whl (350 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m350.0/350.0 kB\u001b[0m \u001b[31m7.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+            "\u001b[?25hDownloading formulaic-1.2.1-py3-none-any.whl (117 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m117.3/117.3 kB\u001b[0m \u001b[31m13.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading interface_meta-1.3.0-py3-none-any.whl (14 kB)\n",
+            "Building wheels for collected packages: autograd-gamma\n",
+            "  Building wheel for autograd-gamma (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for autograd-gamma: filename=autograd_gamma-0.5.0-py3-none-any.whl size=4030 sha256=396ed5eb08157c03d59c81b4f38dd48531d48fc4cefbea5658337a9410f72889\n",
+            "  Stored in directory: /root/.cache/pip/wheels/50/37/21/0a719b9d89c635e89ff24bd93b862882ad675279552013b2fb\n",
+            "Successfully built autograd-gamma\n",
+            "Installing collected packages: interface-meta, autograd-gamma, formulaic, lifelines\n",
+            "Successfully installed autograd-gamma-0.5.0 formulaic-1.2.1 interface-meta-1.3.0 lifelines-0.30.1\n"
           ]
         }
       ],
@@ -104,7 +125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": 2,
       "id": "ufynRZjsNwcN",
       "metadata": {
         "id": "ufynRZjsNwcN"
@@ -123,7 +144,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": 3,
       "id": "d1817009",
       "metadata": {
         "colab": {
@@ -137,7 +158,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ],
@@ -177,8 +198,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "id": "d0e191f8",
+      "metadata": {},
+      "source": [
+        "<span style=\"color: red;\">IMPORTANT: Change the file_path string into the directory of the dataset in your Google Drive folder.</span>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": 4,
       "id": "G7_Y2O1sEj09",
       "metadata": {
         "id": "G7_Y2O1sEj09"
@@ -192,7 +221,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": 5,
       "id": "EnSUiZQzEj09",
       "metadata": {
         "colab": {
@@ -207,7 +236,7 @@
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-469addb5-2468-4835-8c73-ac084e1ab5fd\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-da6f58d9-d6dd-4c6c-883b-c3abd5e83355\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -377,7 +406,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "      \n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-469addb5-2468-4835-8c73-ac084e1ab5fd')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-da6f58d9-d6dd-4c6c-883b-c3abd5e83355')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "      \n",
@@ -429,12 +458,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-469addb5-2468-4835-8c73-ac084e1ab5fd button.colab-df-convert');\n",
+              "        document.querySelector('#df-da6f58d9-d6dd-4c6c-883b-c3abd5e83355 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-469addb5-2468-4835-8c73-ac084e1ab5fd');\n",
+              "        const element = document.querySelector('#df-da6f58d9-d6dd-4c6c-883b-c3abd5e83355');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -517,7 +546,7 @@
               "[5 rows x 40 columns]"
             ]
           },
-          "execution_count": 92,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -529,7 +558,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": 6,
       "id": "qzuVXRkhEj09",
       "metadata": {
         "colab": {
@@ -620,7 +649,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": 7,
       "id": "6bd43841",
       "metadata": {
         "id": "6bd43841"
@@ -668,7 +697,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": 8,
       "id": "9eca984e",
       "metadata": {
         "colab": {
@@ -754,7 +783,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": 9,
       "id": "dce0040d",
       "metadata": {
         "colab": {
@@ -818,7 +847,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": 10,
       "id": "6b6d4473",
       "metadata": {
         "colab": {
@@ -858,7 +887,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "id": "_1-eFvYKHch3",
       "metadata": {
         "colab": {
@@ -883,7 +912,6 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "--- FINAL RESULTS ---\n",
             "Median time from Symptoms to Recovery: 28.0 days\n"
           ]
         }
@@ -931,7 +959,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 99,
+      "execution_count": 12,
       "id": "18ffa744",
       "metadata": {
         "colab": {
@@ -972,7 +1000,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": 13,
       "id": "b32af75b",
       "metadata": {
         "colab": {
@@ -1012,7 +1040,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 101,
+      "execution_count": 14,
       "id": "9a1d3539",
       "metadata": {
         "colab": {
@@ -1052,7 +1080,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 102,
+      "execution_count": 15,
       "id": "718ac17b",
       "metadata": {
         "colab": {
@@ -1092,7 +1120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": 16,
       "id": "270216a7",
       "metadata": {
         "colab": {
@@ -1168,7 +1196,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 105,
+      "execution_count": 17,
       "id": "3d749691",
       "metadata": {
         "colab": {
@@ -1214,7 +1242,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 106,
+      "execution_count": 18,
       "id": "7358999c",
       "metadata": {
         "colab": {
@@ -1270,7 +1298,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "id": "a9762c76",
       "metadata": {
         "colab": {
@@ -1332,7 +1360,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 108,
+      "execution_count": 20,
       "id": "5d75e3cc",
       "metadata": {
         "colab": {
@@ -1383,7 +1411,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 109,
+      "execution_count": 21,
       "id": "a79b9a9d",
       "metadata": {
         "colab": {
@@ -1492,7 +1520,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 110,
+      "execution_count": 22,
       "id": "9ef5b167",
       "metadata": {
         "colab": {
@@ -1529,7 +1557,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 111,
+      "execution_count": 23,
       "id": "VImdERTDJtvX",
       "metadata": {
         "colab": {
@@ -1560,7 +1588,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 112,
+      "execution_count": 24,
       "id": "RvuT5uVsU9_E",
       "metadata": {
         "colab": {
@@ -1603,7 +1631,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 113,
+      "execution_count": 25,
       "id": "7syNBcgwVCoA",
       "metadata": {
         "colab": {
@@ -1697,7 +1725,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 114,
+      "execution_count": 26,
       "id": "lK088LZcAhlG",
       "metadata": {
         "colab": {
@@ -1814,7 +1842,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 115,
+      "execution_count": 27,
       "id": "4KSkvPMVAhlG",
       "metadata": {
         "colab": {
@@ -2040,7 +2068,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "id": "DvrJjKZqAhlH",
       "metadata": {
         "colab": {
